fix bug - Big / Small Players Derender too much added echo cube added size voucher (but it does nothing right now) added gem of size shifting (but it does nothing right now) made omnicollar and omniring give themselves after a recipe